# cedar-detect-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
python/cedar_detect/: __init__.py  _algorithm.pyi  _cedar_detect.pyi
scripts/: before-linux.sh  before-mac.sh  before-win.cmd  protoc.sh
src/: algorithm_wrapper.rs  histogram_funcs_wrapper.rs  lib.rs
tests/unit/: conftest.py  test_algorithm_wrapper.py
