[build-system]
requires = ["maturin>=1.0,<2.0", "wheel"]
build-backend = "maturin"

[project]
name = "cedar-detect"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = ["astronomy"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version"]

dependencies = [
    "numpy >= 1.21.1",
    "Pillow >= 8.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "cedar_detect._cedar_detect"
features = ["pyo3/extension-module"]
sdist = false

[tool.pytest.ini_options]
pythonpath = "./python"
testpaths = [
    "tests/unit/*",
]
